pushing homework4 to remote repository for submission

--- a/homework4/hw4.ipynb
+++ b/homework4/hw4.ipynb
@@ -36,7 +36,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comments here"
+    "# Your comments here\n",
+    "#in 2.4 I had all of my variables defined within the function and I was getting an error that said my first variable wasn't defined so i moved my variables outside of my function and that fixed my problem.\n",
+    "# in 2.3 when I run my function it returns True, None, False, None. There is no error message and when I google it there isn't a fix I could find so I'm not sure whats going on with it.\n",
+    "# in 2.2 I did the problem and then realized it needed to be with assignment operators so I changed everything in my function to assignment operators but when I tried to run the code it gave me an error that said my return line didn't work because what I was asking the function to return didn't exist. This was because I was asking it to return a variable from the previous version of my function so I changed it to the current version and it worked again."
    ]
   },
   {
@@ -85,12 +88,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "f8526535-a6a9-46be-83d3-658ad4500762",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[13, -7, 30, 3.3333333333333335, 3, 1, 1000]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def math_equations(num_1, num_2):\n",
+    "# takes two numbers and runs them through a series of equations and returns the results as a list\n",
+    "    sum=num_1+num_2\n",
+    "    diff=num_2-num_1\n",
+    "    prod=num_1*num_2\n",
+    "    div=num_1/num_2\n",
+    "    floor=num_1//num_2\n",
+    "    remain=num_1%num_2\n",
+    "    power=num_1**num_2\n",
+    "    operations=[sum,diff,prod,div,floor,remain,power]\n",
+    "    return operations\n",
+    "print(math_equations(10,3))\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -108,7 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your thinking process and description here"
+    "# I defined my equation with the inputs num_1 and num_2 and then used those variables and created variables for all the equations I wanted num_1 and num_2 to go through.\n",
+    "# then I had my final variable that was a list of all the equations I made and had my function return that.\n",
+    "# I think my function shows good function writing because my variables are clearly explained and I have a comment explaining what the function does."
    ]
   },
   {
@@ -135,12 +161,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 100,
    "id": "7de14ca3-65c2-463f-8345-529603368c0a",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60.0"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def increments_of_5_and_multiply(num_1,num_2):\n",
+    "# takes two variables and increments one by 5 and then multiplies them together and then multiplies that by 3\n",
+    "    num_1 /= 5\n",
+    "    num_1 *= num_2\n",
+    "    num_1 *= 3\n",
+    "    return num_1\n",
+    "increments_of_5_and_multiply(10,10)"
    ]
   },
   {
@@ -158,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your thinking process and response here"
+    "# I thought i could just have one variable num and floor divide that by 5 and then multipy that by 3 but it was giving me 6 when I needed 60 so I made another variable name with the same value as nnum_1 and multiplied them togehter and then I got 60. Assaignment operators are important because they can make functions more streamlined and less cluttered with words. They also make doing equations simpler. "
    ]
   },
   {
@@ -190,12 +235,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "id": "6fccfc23-bb87-4390-9291-7f3269472573",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "None\n",
+      "False\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def is_it_in_range(x,low,high):\n",
+    "# function takes in a number x and checks if it is inbetween low and high, two other variables, or not\n",
+    "       if x>=low and x<=high:\n",
+    "           print(\"True\")\n",
+    "       else: print(\"False\")\n",
+    "\n",
+    "print(is_it_in_range(5,1,10))\n",
+    "print(is_it_in_range(15,1,10))\n",
+    "        "
    ]
   },
   {
@@ -213,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your thinking process and description here"
+    "# I think my function displays good function writing because I have descriptive names. I also wrote a comment explaining the use of this function."
    ]
   },
   {
@@ -246,12 +310,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "12165244-8b1a-4abc-b65d-10547db823d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is your iced latte!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "a=\"Here\"\n",
+    "b=\"is\"\n",
+    "c=\"your\"\n",
+    "d=\"iced\"\n",
+    "e=\"latte\"\n",
+    "def make_a_sentence(a,b,c,d,e):\n",
+    "# takes a series of variables that are strings and prints them together to make a sentence\n",
+    "    sentence= a+\" \"+b+\" \"+c+\" \"+d+\" \"+e+\"!\"\n",
+    "    return sentence\n",
+    "print(make_a_sentence(a,b,c,d,e))"
    ]
   },
   {
@@ -279,12 +360,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "id": "569001a8-f62a-4fdc-bebe-ec27f77f2385",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93.2\n",
+      "307\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def celsius_to_farenheit(celsius):\n",
+    "# takes a temperature in celsius and turns it into farenheit\n",
+    "    farenheit=(celsius*(9/5))+32\n",
+    "    return farenheit\n",
+    "print(celsius_to_farenheit(34))\n",
+    "\n",
+    "def celsius_to_kelvin(celsius):\n",
+    "# takes a temperature in celsius and turns it into kelvin\n",
+    "    kelvin=celsius+273\n",
+    "    return kelvin\n",
+    "print(celsius_to_kelvin(34))"
    ]
   },
   {
@@ -312,12 +412,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "id": "299f6dd8-7dda-4465-96f7-712e9149e179",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(122.0, 323)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def farenheit_and_kelvin(celsius):\n",
+    "# takes a temperature in celsius and returns a list with the converted temperature in farenheit and in kelvin using the functions made in the cell above\n",
+    "    farenheit=celsius_to_farenheit(celsius)\n",
+    "    kelvin=celsius_to_kelvin(celsius)\n",
+    "    return (farenheit,kelvin)\n",
+    "print(farenheit_and_kelvin(50))"
    ]
   },
   {
@@ -333,12 +446,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "0c65d553-05b5-4f2f-8312-3e9ff1550753",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "125.6636\n",
+      "2827.431\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "pi=3.14159\n",
+    "def circumference_of_a_circle(radius):\n",
+    "# takes a radius and computes the circumference\n",
+    "    circumference=2*pi*radius\n",
+    "    return circumference\n",
+    "print(circumference_of_a_circle(20))\n",
+    "\n",
+    "def area_of_a_circle(radius):\n",
+    "# takes a radius and computes the area\n",
+    "    area=pi*(radius**2)\n",
+    "    return area\n",
+    "print(area_of_a_circle(30))\n",
+    "\n",
+    "# in this situation it is useful to have a global variable for pi so that you don't have to keep defining it in all of your functions. "
    ]
   },
   {
@@ -388,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
