finalizing for submission

--- a/homework7/hw7.ipynb
+++ b/homework7/hw7.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "08dabd73-3dbc-4aab-843a-d4b81102835d",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "id": "494f31ac-a231-4f65-b202-e85208d6bee4",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "id": "79245f57-3a83-4300-96d2-ea7a9035d3eb",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "id": "9f18f22e-3137-4aa9-b623-6d2c0caec4c3",
    "metadata": {},
    "outputs": [
@@ -159,16 +159,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "id": "131b09c8-d352-4566-b710-31316483ae89",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 0 0 0 0]\n",
-      "[0 0 0 0 0]\n"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'list' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[56], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlist\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;28mlist\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(array\u001b[38;5;241m-\u001b[39marray)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlist\u001b[39m\u001b[38;5;241m-\u001b[39marray)\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'list'"
      ]
     }
    ],
@@ -189,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "id": "cae7749f-cc6e-45d6-9e07-72aa2cefc0b6",
    "metadata": {},
    "outputs": [
@@ -218,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "id": "ccdc8e13-ec41-4b79-8034-0934c012580e",
    "metadata": {},
    "outputs": [
@@ -288,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "id": "e6d45993-2390-4e2d-bb6e-930919dd7d46",
    "metadata": {},
    "outputs": [
@@ -298,7 +301,7 @@
        "[3, 4, 8]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,25 +375,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 92,
    "id": "359f524a-30ee-446c-a6d6-a57faecf5bcb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1' '2' '3' 'a' 'b' 'c']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 5, 9]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "def sort_this_array(list):\n",
-    "    arr= np.array(list)\n",
-    "    return print(np.sort(list))\n",
-    "\n",
-    "sort_this_array([\"1\",\"a\",\"c\",\"2\",\"b\",\"3\"])"
+    "def array_index_changing(var):\n",
+    "# takes a 2d array and returns an indexed number that increases by one as it continues through the variable. So the first number in the first list, second number in the second list and so on.\n",
+    "    result=[]\n",
+    "    for i in range(len(var)):\n",
+    "        result.append(var[i][i])\n",
+    "    return result\n",
+    "array_index_changing([[1,2,3],[4,5,6],[7,8,9]])"
    ]
   },
   {
@@ -410,7 +417,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# For my example I took inspiration from NumPy Indexing to loop through indexes of 2d arrays. I also took inspiriation from appending arrays to create a new 1d array."
    ]
   },
   {
@@ -434,41 +441,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "fe11ac2d-dcdb-4e51-9460-c3cc1be48bef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your comment here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
    "id": "2c5a3bb2-2d67-4e79-8060-ae4feb643bd5",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "66e2a829-e478-4c97-8412-846cd93161f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'even_sum'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01meven_sum\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mes\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'even_sum'"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "import even_sum as es"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -480,12 +459,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "89ad196d-5948-4e20-899a-d31eebdc4f2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "list1 = [1,2,3,4,5,]\n",
+    "list2=[6,7,8,9]\n",
+    "es.sum_even_numbers(list1+list2)"
    ]
   },
   {
@@ -498,12 +490,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "092eb2b9-dd15-4fdf-a7a2-ad32cd22ed88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "import example as ex"
    ]
   },
   {
@@ -516,22 +508,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 86,
    "id": "6b2e8b39-8441-469a-a128-19b04b8c8a2f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rocket_velocities \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\n\u001b[1;32m      2\u001b[0m     [\u001b[38;5;241m1000\u001b[39m, \u001b[38;5;241m5000\u001b[39m, \u001b[38;5;241m8000\u001b[39m, \u001b[38;5;241m12000\u001b[39m],  \u001b[38;5;66;03m# Rocket 1's velocity at different times\u001b[39;00m\n\u001b[1;32m      3\u001b[0m     [\u001b[38;5;241m2000\u001b[39m, \u001b[38;5;241m6000\u001b[39m, \u001b[38;5;241m9000\u001b[39m, \u001b[38;5;241m10000\u001b[39m],  \u001b[38;5;66;03m# Rocket 2\u001b[39;00m\n\u001b[1;32m      4\u001b[0m     [\u001b[38;5;241m3000\u001b[39m, \u001b[38;5;241m3100\u001b[39m, \u001b[38;5;241m3200\u001b[39m, \u001b[38;5;241m3300\u001b[39m]    \u001b[38;5;66;03m# Rocket 3\u001b[39;00m\n\u001b[1;32m      5\u001b[0m ])\n\u001b[1;32m      7\u001b[0m mass_of_planet \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5.972e24\u001b[39m \u001b[38;5;66;03m# kilograms\u001b[39;00m\n\u001b[1;32m      8\u001b[0m radius_of_planet \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m6.371e6\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rocket_velocities = np.array([\n",
     "    [1000, 5000, 8000, 12000],  # Rocket 1's velocity at different times\n",
@@ -545,12 +525,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "05196d65-9e31-4cec-ad01-9f9cebe00046",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Rocket left the planet!',\n",
+       " 'Rocket is orbiting around the planet.',\n",
+       " 'Rocket crashes back into the planet!']"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "ex.escape_velocity(mass_of_planet, radius_of_planet)\n",
+    "ex.orbital_velocity(mass_of_planet, radius_of_planet)\n",
+    "ex.rocket_launch(rocket_velocities, mass_of_planet, radius_of_planet)"
    ]
   },
   {
@@ -568,7 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comments here"
+    "# follows good coding practices because there are some comments. Good coding practices could be improved by making comments more in depth."
    ]
   },
   {
@@ -599,7 +594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# I made a module that would take the parallax angle, temperature, and radius of a star to see if it would be visible or not. This is based off of luminosity and distance so those equations do not have to be continuously repeated."
    ]
   },
   {
@@ -617,7 +612,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# The most challenging part was coming up with an idea for a module. I learned the uses of modules that I can apply for the future. I also learned how to do inequality questions with another function. "
    ]
   },
   {
@@ -630,12 +625,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 94,
    "id": "fb9821b1-3cc0-4999-97eb-441571bbd5e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "import star_visibility as sv"
    ]
   },
   {
@@ -648,12 +643,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "b63d3d1f-64bd-4dc7-b20f-c562d09c7c92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Star can be seen\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "sv.star_distance(0.5) # 2.0\n",
+    "sv.star_luminosity(2,800) # 1167458.7377\n",
+    "sv.can_be_seen(0.5,2,800) # Star can be seen"
    ]
   },
   {
