creating new branch for hw12

--- a/hw11.ipynb
+++ b/hw11.ipynb
@@ -60,6 +60,7 @@
    "outputs": [],
    "source": [
     "def orbital_period(a):\n",
+    "    # calculates the orbital period with the semi-major axis without a numpy function\n",
     "    period= (a**3)**0.5\n",
     "    return period"
    ]
@@ -149,7 +150,7 @@
    "outputs": [],
    "source": [
     "def orb_period(a):\n",
-    "    #uses a numpy function sqrt to calcuat\n",
+    "    #uses a numpy function sqrt to calcuate orbital period with a semi-major axis\n",
     "    period= np.sqrt(a**3)\n",
     "    return period\n"
    ]
